--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "db"
     ports:
       - "8080:80"
+    environment: 
+      ASPNETCORE_ENVIRONMENT: "Development"
+      ConnectionStrings__DefaultConnection: "server=db;userid=${DB_USER};password=${DB_PASS};database=${DB_NAME};Charset='utf8';"
   db:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
