--- a/docker-compose/dotnet/Dockerfile
+++ b/docker-compose/dotnet/Dockerfile
@@ -1,5 +1,11 @@
-FROM mcr.microsoft.com/dotnet/aspnet:2.1
+FROM centos:centos7
 
-COPY app/bin/Debug/netcoreapp2.1/publish/ app/
+COPY app/ app/
 WORKDIR /app
-ENTRYPOINT ["dotnet", "app.dll"]
+
+RUN yum update -y
+RUN rpm -Uvh https://packages.microsoft.com/config/centos/8/packages-microsoft-prod.rpm
+RUN yum install -y dotnet-sdk-2.1
+RUN dotnet publish
+
+ENTRYPOINT ["dotnet", "watch", "run"]
