--- a/docker-compose/dotnet/Dockerfile
+++ b/docker-compose/dotnet/Dockerfile
@@ -1,11 +1,5 @@
-FROM centos:centos7
+FROM microsoft/dotnet
 
-COPY app/ app/
+COPY ./src /app
 WORKDIR /app
 
-RUN yum update -y
-RUN rpm -Uvh https://packages.microsoft.com/config/centos/8/packages-microsoft-prod.rpm
-RUN yum install -y dotnet-sdk-2.1
-RUN dotnet publish
-
-ENTRYPOINT ["dotnet", "watch", "run"]
