--- a/multi-container/work/Dockerfile
+++ b/multi-container/work/Dockerfile
@@ -1,7 +1,6 @@
 FROM centos:centos7
 
 COPY ./src app/
-WORKDIR /app
 
 RUN yum update -y
 
@@ -18,3 +17,6 @@ RUN npm update -g npm
 RUN yum -y install https://repo.ius.io/ius-release-el7.rpm https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 RUN yum -y install libsecret pcre2 perl perl-Error perl-TermReadKey openssh-clients less emacs-filesystem
 RUN yum -y install git --enablerepo=ius --disablerepo=base,epel,extras,updates
+
+WORKDIR /app
+RUN dotnet restore
