--- a/multi-container/.devcontainer/devcontainer.json
+++ b/multi-container/.devcontainer/devcontainer.json
@@ -23,10 +23,16 @@
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": []
+	"extensions": [
+		"ms-dotnettools.csharp",
+		"coenraads.bracket-pair-colorizer",
+		"streetsidesoftware.code-spell-checker",
+		"mhutchie.git-graph",
+		"christian-kohler.path-intellisense"
+	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [5000],
 
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
